--- a/src/views/main_board/main.fxml
+++ b/src/views/main_board/main.fxml
@@ -2,7 +2,6 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -11,16 +10,11 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="651.0" prefWidth="1074.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.MainController">
     <children>
-      <BorderPane fx:id="mainpane" prefHeight="200.0" prefWidth="200.0">
-         <left>
-              <AnchorPane minHeight="-Infinity" prefHeight="652.0" prefWidth="263.0" style="-fx-background-color: #ffce44; -fx-border-color: black;">
+      <BorderPane fx:id="mainPane" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="-1.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="810.8" AnchorPane.topAnchor="0.0">
+         <bottom>
+              <AnchorPane minHeight="-Infinity" prefHeight="652.0" prefWidth="263.0" style="-fx-background-color: #ffce44; -fx-border-color: black;" BorderPane.alignment="CENTER">
                   <children>
-                      <Label layoutX="81.0" layoutY="34.0" prefHeight="54.0" prefWidth="110.0" stylesheets="@../../static/css/main.css" text="CNPM" textFill="WHITE">
-                          <font>
-                              <Font name="System Bold Italic" size="36.0" />
-                          </font>
-                      </Label>
-                  <Button id="button1" alignment="BASELINE_LEFT" layoutX="7.0" layoutY="163.0" mnemonicParsing="false" onAction="#handleHogiadinh" prefHeight="62.0" prefWidth="250.0" stylesheets="@../../static/css/main.css" text="Hộ gia đình" textFill="WHITE">
+                  <Button id="button1" alignment="BASELINE_LEFT" layoutX="6.0" layoutY="208.0" mnemonicParsing="false" onAction="#handleHogiadinh" prefHeight="62.0" prefWidth="250.0" stylesheets="@../../static/css/main.css" text="Hộ gia đình" textFill="WHITE">
                      <graphic>
                         <ImageView fitHeight="24.0" fitWidth="22.0" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -35,7 +29,7 @@
                         <Insets left="50.0" />
                      </padding>
                   </Button>
-                  <Button id="button1" alignment="BASELINE_LEFT" layoutX="7.0" layoutY="387.0" mnemonicParsing="false" onAction="#handleThongke" prefHeight="62.0" prefWidth="250.0" stylesheets="@../../static/css/main.css" text="Thống kê" textFill="WHITE">
+                  <Button id="button1" alignment="BASELINE_LEFT" layoutX="7.0" layoutY="352.0" mnemonicParsing="false" onAction="#handleThongke" prefHeight="62.0" prefWidth="250.0" stylesheets="@../../static/css/main.css" text="Thống kê" textFill="WHITE">
                      <graphic>
                         <ImageView fitHeight="24.0" fitWidth="22.0" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -50,7 +44,7 @@
                         <Insets left="50.0" />
                      </padding>
                   </Button>
-                  <Button id="button1" alignment="BASELINE_LEFT" layoutX="6.0" layoutY="233.0" mnemonicParsing="false" prefHeight="62.0" prefWidth="250.0" stylesheets="@../../static/css/main.css" text="Phát quà" textFill="WHITE">
+                  <Button id="button1" alignment="BASELINE_LEFT" layoutX="7.0" layoutY="280.0" mnemonicParsing="false" onAction="#handlePhatqua" prefHeight="62.0" prefWidth="250.0" stylesheets="@../../static/css/main.css" text="Phát quà" textFill="WHITE">
                      <graphic>
                         <ImageView fitHeight="24.0" fitWidth="22.0" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -65,35 +59,37 @@
                         <Insets left="50.0" />
                      </padding>
                   </Button>
-                  <Button id="button1" alignment="BASELINE_LEFT" contentDisplay="RIGHT" layoutX="53.0" layoutY="301.0" mnemonicParsing="false" onAction="#handlePhatquaThieunhi" prefHeight="34.0" prefWidth="154.0" stylesheets="@../../static/css/main.css" text="Thiếu nhi" textAlignment="CENTER" textFill="WHITE">
+                  <Button id="button1" alignment="BASELINE_LEFT" contentDisplay="RIGHT" layoutX="41.0" layoutY="426.0" mnemonicParsing="false" onAction="#handleThongke" prefHeight="62.0" prefWidth="181.0" stylesheets="@../../static/css/main.css" text="Đăng xuất" textAlignment="CENTER" textFill="WHITE">
                      <font>
-                        <Font size="14.0" />
+                        <Font size="18.0" />
                      </font>
                      <padding>
-                        <Insets left="75.0" />
+                        <Insets left="50.0" />
                      </padding>
                   </Button>
-                  <Button id="button1" alignment="BASELINE_LEFT" contentDisplay="CENTER" layoutX="54.0" layoutY="340.0" mnemonicParsing="false" onAction="#handlePhatquaHocsinh" prefHeight="34.0" prefWidth="154.0" stylesheets="@../../static/css/main.css" text="Học sinh" textFill="WHITE">
-                     <font>
-                        <Font size="14.0" />
-                     </font>
-                     <padding>
-                        <Insets left="75.0" />
-                     </padding>
-                  </Button>
-                  <ImageView fitHeight="19.0" fitWidth="17.0" layoutX="73.0" layoutY="310.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="56.0" layoutY="22.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@../../static/img/thieunhi.png" />
+                        <Image url="@../../static/img/logo.png" />
                      </image>
                   </ImageView>
-                  <ImageView fitHeight="19.0" fitWidth="17.0" layoutX="64.0" layoutY="347.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fitHeight="84.0" fitWidth="71.0" layoutX="21.0" layoutY="533.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@../../static/img/hocsinh.png" />
+                        <Image url="@../../static/img/facebook.png" />
+                     </image>
+                  </ImageView>
+                  <ImageView fitHeight="64.0" fitWidth="66.0" layoutX="100.0" layoutY="536.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../../static/img/github.png" />
+                     </image>
+                  </ImageView>
+                  <ImageView fitHeight="70.0" fitWidth="80.0" layoutX="171.0" layoutY="533.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../../static/img/gmail.png" />
                      </image>
                   </ImageView>
                   </children>
               </AnchorPane>
-         </left>
+         </bottom>
       </BorderPane>
     </children>
 </AnchorPane>
